--- a/src/App.css
+++ b/src/App.css
@@ -20,5 +20,5 @@ body, #root, html{
     margin-top: 10vh;
     margin-left: 2px;
     color: rgb(49, 92, 92);
-    border: 2px solid rgba(59, 10, 116, 0.616);
+    border: 2px solid;
 }
