--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,23 @@ body, #root, html{
     color: rgb(49, 92, 92);
     border: 3px solid;
 }
+
+button{
+    margin-right: 1vh;
+    padding: 5px;
+    text-align: center;
+    border-radius: 5px;
+    width: auto;
+    height: 40px;
+    font-size: large;
+}
+
+button:hover{
+    cursor: pointer;
+    background-color: rgba(164, 226, 231, 0.705);
+}
+
+.menu{
+    background-color: rgb(106, 178, 184);
+    padding: 3vh;
+}
